--- a/src/components/preloader/preloader.module.scss
+++ b/src/components/preloader/preloader.module.scss
@@ -3,8 +3,7 @@
   height: 100%;
   position: fixed;
 
-  background-color: rgb(0,0,0,0.2);
-  //background-color: ;
+  background-color: rgba(0,0,0,0.2);
 }
 .loaderWrap {
   height: 100%;
